# logger

./: CHANGELOG.md  CMakeLists.txt
dependencies/: CMakeLists.txt
include/terra/logger/: logger.h  null_ostream.h
sample/src/: logger_demo.cpp
src/: CMakeLists.txt  logger.cpp  logger_buffer.h  null_ostream.cpp
